--- a/teste01-formulario-estilizado/style.css
+++ b/teste01-formulario-estilizado/style.css
@@ -37,9 +37,12 @@ input {
 
 #id-botao{
     background-color: rgb(77, 77, 77);
-    color: white;
     width: 180px;
     margin-top: 10px;
+    
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
 
     cursor: pointer;
     transition: 0.2s ease;
